kubernetes/apps/uxi/ptr/api/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uxi-ptr-api
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: domain-9-subdomain-https
    - name: internal
      namespace: kube-system
      sectionName: domain-9-subdomain-https
  hostnames:
    - ptr.${DOMAIN_9}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/
      backendRefs:
        - name: uxi-ptr-api
          port: 21014
