kubernetes/apps/uxi/ptr/api/app/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: uxi-ptr-api-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: uxi-ptr-server
      app.kubernetes.io/component: api
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: '21014'
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '21017'
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /metrics
