kubernetes/apps/uxi/ptr/api/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: uxi-ptr-api
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: uxi-ptr-server
      app.kubernetes.io/component: api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: uxi-ptr-server
              app.kubernetes.io/component: gateway
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: uxi-ptr-server
              app.kubernetes.io/component: worker
      ports:
        - protocol: TCP
          port: 21017
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: uxi-ptr-postgres
      ports:
        - protocol: TCP
          port: 5432
